fix: overview cards alignment

--- a/src/components/cardStat.module.css
+++ b/src/components/cardStat.module.css
@@ -9,21 +9,25 @@
   text-wrap: nowrap;
 }
 
-.value {
-  line-height: normal;
-  color: var(--value-color, var(--regular-text-color));
+.value-container {
+  width: 100%;
+  .value {
+    line-height: normal;
+    color: var(--value-color, var(--regular-text-color));
+    overflow: hidden;
 
-  &.small {
-    font-size: 18px;
-    font-weight: 500;
-  }
-  &.medium {
-    font-size: 28px;
-    letter-spacing: -1.12px;
-  }
-  &.large {
-    font-size: 32px;
-    line-height: 16px;
+    &.small {
+      font-size: 18px;
+      font-weight: 500;
+    }
+    &.medium {
+      font-size: 28px;
+      letter-spacing: -1.12px;
+    }
+    &.large {
+      font-size: 32px;
+      line-height: 16px;
+    }
   }
 }
 
