--- a/src/features/Overview/ProgramCacheCard/programCacheCard.module.css
+++ b/src/features/Overview/ProgramCacheCard/programCacheCard.module.css
@@ -1,11 +1,14 @@
 .stat-row {
   display: flex;
   flex-wrap: wrap;
-  gap: 8px;
+  gap: var(--space-2);
   width: 100%;
 
   > div {
     flex: 1 1 auto;
     min-width: 100px;
+    &.storage-stat-container {
+      min-width: 160px;
+    }
   }
 }
